Fix stale transform values in view transition snapshots https://bugs.webkit.org/show_bug.cgi?id=310181

Reviewed by Matt Woodrow.

When snapshotting with flattened compositing layers, `RenderLayer::renderableTransform()` can use `m_transform`, which may not reflect the current value of an accelerated transform-related animation.

When `PaintBehavior::Snapshotting` is set and a transform-related accelerated animation is running, use `animatedStyle()` to compute the renderable transform instead of `m_transform`. This mirrors the existing `currentTransform()` handling for accelerated transform animations and keeps snapshot rendering aligned with the current animated value.

* Source/WebCore/rendering/RenderLayer.cpp: (`WebCore::RenderLayer::renderableTransform`):
Use `animatedStyle()` during snapshotting for running accelerated transform-related animations.

Canonical link: https://commits.webkit.org/309982@main